@@ -1,10 +1,11 @@
 package com.example.team1_be.utils;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.Profile;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 
 import springfox.documentation.builders.ApiInfoBuilder;
@@ -18,6 +19,7 @@ import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
 
+@Profile("prod")
 @Configuration
 public class SwaggerConfig {
 
@@ -25,8 +27,8 @@ public class SwaggerConfig {
 	public Docket swagger() {
 		return new Docket(DocumentationType.OAS_30)
 			.ignoredParameterTypes(AuthenticationPrincipal.class)
-			.securitySchemes(Arrays.asList(apiKey()))
-			.securityContexts(Arrays.asList(securityContext()))
+			.securitySchemes(List.of(apiKey()))
+			.securityContexts(Collections.singletonList(securityContext()))
 			.select()
 			.apis(RequestHandlerSelectors.basePackage("com.example.team1_be.domain"))
 			.paths(PathSelectors.any())
@@ -54,6 +56,6 @@ public class SwaggerConfig {
 		AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
 		AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
 		authorizationScopes[0] = authorizationScope;
-		return Arrays.asList(new SecurityReference("Authorization", authorizationScopes));
+		return List.of(new SecurityReference("Authorization", authorizationScopes));
 	}
 }
